--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,6 +8,7 @@
   ],
   "customManagers": [
     {
+      "description": "Update Rust tool dependencies in GitHub Actions workflows",
       "customType": "regex",
       "fileMatch": [
         "(^|/)(workflow-templates|\\.(?:github|gitea|forgejo)/(?:workflows|actions))/.+\\.ya?ml$",
@@ -17,8 +18,9 @@
         "tool:\\s+(?<depName>[\\w\\d-_]+)@(?<currentValue>\\d+(?:\\.\\d+(?:\\.\\d+)))"
       ],
       "autoReplaceStringTemplate": "tool: {{{depName}}}@{{{newValue}}}",
-      "depTypeTemplate": "tool",
-      "datasourceTemplate": "crate"
+      "depTypeTemplate": "dev-dependencies",
+      "datasourceTemplate": "crate",
+      "versioningTemplate": "cargo"
     }
   ]
 }
