--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,7 +4,8 @@
     "local>neoeinstein/renovate-config",
     "local>neoeinstein/renovate-config//rust/library",
     "local>neoeinstein/renovate-config:approve-breaking",
-    ":automergeDigest"
+    ":automergeDigest",
+    ":rebaseStalePRs"
   ],
   "customManagers": [
     {
